15 Feb 2000

- Fixed bug in can_do_ttf. Can now _really_ be called as static or
  class method.

14 Feb 2000

- Fixed bug in bar width. Removed some roundings, and always add 1
  to left boundary. Also, adapt r_margin on the fly to make sure bars
  are always exactly the same width. This changes the look of graphs
  slightly, but it looks so much better in general.
- Fixed bug in drawing of vertical x labels with x_tick_number enabled
- Cleaned up code in setup_coords in axestype.pm a bit

12 Feb 2000

- Removed ReadFile sub from GD::Graph.pm. I never got around to making
  it part of the interface anyway. replaced by GD::Graph::Data.
- Rewrote lots, and lots of code. General cleanup. Removal of direct
  work with data array. Now only works with interface of GD::Graph::Data
  object (hopefully)

09 Feb 2000

- Added GD::Graph::Data to distribution

27 Jan 2000

- Added patch from Hildebrand, which allows non-drawing of accents on
  bars with accent_treshold option
- Fixed rounding problems with overwrite == 2, alert from Hildebrand,
  also a patch supplied which couldn't be used because of other code
  changes related to sample17
- Added sample18, supplied by Hildebrand as illustration of rounding
  problem.
- Fixed off-by one error in pick_data_color whenever color pick is based
  on point instead of data set (cycle_clrs and pie)
- Added accent_treshold option to area charts

09 Jan 2000

- Rewrote some documentation to reflect new GD::Text behaviour.

08 Jan 2000

- Rewrote set method to only accept documented attributes.
- Made sure all documented attributes are part of the %Defaults hashes.
- Changed inheritance slightly, because changing the set method and
  using access to file scoped variables didn't work very well with
  multiple inheritance in mixed and linespoints. All file scoped
  material now is kept in the common ancestor of these, i.e. axestype.

06 Jan 2000

- Added shadow patch from Jeremy Wadsack, changed a few things: Allow