@@ -8,11 +8,14 @@
 #	Description:
 #		Package of general utilities.
 #
-# $Id: utils.pm,v 1.3 2000/02/13 12:35:49 mgjv Exp $
+# $Id: utils.pm,v 1.4 2000/02/16 12:45:32 mgjv Exp $
 #
 #==========================================================================
  
 package GD::Graph::utils;
+
+$GD::Graph::utils::VERSION = 
+	(q($Revision: 1.4 $) =~ /\s([\d.]+)/ ? $1 : "0.0");
 
 use strict;
 
@@ -21,13 +24,8 @@ require Exporter;
 
 @GD::Graph::utils::ISA = qw( Exporter );
  
-@EXPORT_OK = qw( _max _min _round );
-%EXPORT_TAGS = ( all => [qw(_max _min _round)],);
-
-$GD::Graph::utils::prog_name    = 'GD::Graph::utils.pm';
-$GD::Graph::utils::prog_rcs_rev = '$Revision: 1.3 $';
-$GD::Graph::utils::prog_version = 
-	($GD::Graph::utils::prog_rcs_rev =~ /\s+(\d*\.\d*)/) ? $1 : "0.0";
+@EXPORT_OK = qw(_max _min _round);
+%EXPORT_TAGS = (all => [qw(_max _min _round)]);
 
 sub _max { 
 	my ($a, $b) = @_; 
@@ -45,13 +43,8 @@ sub _min {
 	( $a <= $b ) ? $a : $b; 
 }
 
-sub _round { 
-	sprintf "%.0f", shift;
-}
+sub _round { sprintf "%.0f", shift }
 
-sub version {
-	$GD::Graph::utils::prog_version;
-}
+sub version { $GD::Graph::utils::VERSION }
 
-$GD::Graph::utils::prog_name;
-
+"Just another true value";
